fix vertical spacing around download shape

--- a/src/ui/components/ShapePlaybook/stylesheet.css
+++ b/src/ui/components/ShapePlaybook/stylesheet.css
@@ -91,7 +91,7 @@
 
 @media (max-width: 887px) {
   :scope {
-    margin: calc(71rem - 15%) 0 0 0;
+    margin: calc(60rem - 15%) 0 0 0;
   }
 
   .content {
